@startuml

title __DATA's Class Diagram__\n

  namespace com.example.androidassignments {
    namespace data {
      class com.example.androidassignments.data.LoginDataSource {
          + login()
          + logout()
      }
    }
  }
  

  namespace com.example.androidassignments {
    namespace data {
      class com.example.androidassignments.data.LoginRepository {
          {static} - instance : LoginRepository
          {static} + getInstance()
          + isLoggedIn()
          + login()
          + logout()
          - LoginRepository()
          - setLoggedInUser()
      }
    }
  }
  

  namespace com.example.androidassignments {
    namespace data {
      class com.example.androidassignments.data.Result {
          + toString()
          - Result()
      }
    }
  }
  

  namespace com.example.androidassignments {
    namespace data {
      class com.example.androidassignments.data.Result.Error {
          - error : Exception
          + Error()
          + getError()
      }
    }
  }
  

  namespace com.example.androidassignments {
    namespace data {
      class com.example.androidassignments.data.Result.Success {
          + Success()
          + getData()
      }
    }
  }
  

  com.example.androidassignments.data.LoginRepository o-- com.example.androidassignments.data.LoginDataSource : dataSource
  com.example.androidassignments.data.LoginRepository o-- com.example.androidassignments.data.model.LoggedInUser : user
  com.example.androidassignments.data.Result +-down- com.example.androidassignments.data.Result.Error
  com.example.androidassignments.data.Result +-down- com.example.androidassignments.data.Result.Success
  com.example.androidassignments.data.Result.Error -up-|> com.example.androidassignments.data.Result
  com.example.androidassignments.data.Result.Success -up-|> com.example.androidassignments.data.Result
  com.example.androidassignments.data.Result.Success o-- T : data


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
